// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logCopyGeneratedAnswer with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "copyToClipboard",
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logDislikeGeneratedAnswer with the right payload 1`] = `
[
  "Qna.SubmitFeedback",
  {
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
    "feedback": {
      "liked": false,
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logGeneratedAnswerDetailedFeedback with the right payload 1`] = `
[
  "Qna.SubmitFeedback",
  {
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
    "feedback": {
      "details": "example details",
      "liked": false,
      "reason": "other",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logGeneratedAnswerHideAnswers with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "hide",
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logGeneratedAnswerShowAnswers with the right payload 1`] = `
[
  "Qna.AnswerAction",
  {
    "action": "show",
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logHoverCitation with the right payload 1`] = `
[
  "Qna.CitationHover",
  {
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
    "citation": {
      "id": "citation_id",
      "type": "Source",
    },
    "citationHoverTimeInMs": 100,
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logLikeGeneratedAnswer with the right payload 1`] = `
[
  "Qna.SubmitFeedback",
  {
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
    "feedback": {
      "liked": true,
    },
  },
]
`;

exports[`generated answer insight analytics actions when analyticsMode is \`next\` should log #logOpenGeneratedAnswerSource with the right payload 1`] = `
[
  "Qna.CitationClick",
  {
    "answer": {
      "responseId": "456",
      "type": "RGA",
    },
    "citation": {
      "id": "citation_id",
      "type": "Source",
    },
  },
]
`;
